test/deprecated/extern-classes.good
extern-classes.chpl:2: warning: Extern classes have been deprecated
extern-classes.chpl:2: error: Extern classes are not supported by initializers
