test/deprecated/extern-classes.chpl

extern class C {
  var x : int;
}

var c : C;
writeln(c == nil);

